Ulizando anotação Lombok e exluindo construtores, getters e setters